--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -352,20 +352,20 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr />
+                                <hr id="uu_comen_a0" style="display:none;"/>
                                 <div class="row">
-                                    <div class="col-md-8">
+                                    <div class="col-md-8" id="uu_comen_a1" style="display:none;">
                                         <div class="form-group" style="margin:0 !important;">
-                                            <label>Observaciones</label>
+                                            <label>Comentarios</label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-4" id="uu_comen_a2" style="display:none;">
                                         <div class="text-right">
                                             <button class='btn btn-sm btn-info btn-comentario' id="Comentarios1" onclick='ModalComentario(1);'><i class='fa fa-plus'></i> Agregar comentario</button>
                                             <br /><br />
                                         </div>
                                     </div>
-                                    <div class="col-md-12">
+                                    <div class="col-md-12" id="uu_comen_a3" style="display:none;">
                                         <ul class="ctm-ul-list ctm-comentarios" id="general">
                                             <li class="ctm-comentario">
                                                 <div class="ctm-comentario-body">
@@ -484,20 +484,20 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr />
+                                <hr id="uu_comen_b0" style="display:none;"/>
                                 <div class="row">
-                                    <div class="col-md-8">
+                                    <div class="col-md-8" id="uu_comen_b1" style="display:none;">
                                         <div class="form-group" style="margin:0 !important;">
-                                            <label>Observaciones</label>
+                                            <label>Comentarios</label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-4" id="uu_comen_b2" style="display:none;">
                                         <div class="text-right">
                                             <button class='btn btn-sm btn-info btn-comentario' id="Comentarios2" onclick='ModalComentario(2);'><i class='fa fa-plus'></i> Agregar comentario</button>
                                             <br /><br />
                                         </div>
                                     </div>
-                                    <div class="col-md-12">
+                                    <div class="col-md-12" id="uu_comen_b3" style="display:none;">
                                         <ul class="ctm-ul-list ctm-comentarios" id="registro">
                                             <li class="ctm-comentario">
                                                 <div class="ctm-comentario-body">
