titulo registro marca

--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -81,10 +81,10 @@
 <div class="subheader">
     <h1 class="subheader-title">
         @*Registro Marca*@
-        Registro de Propiedad Industrial e Intelectual
-        <small>
-        </small>
-    </h1>
+        <div id="tituloregistromarca">Registro de Propiedad Industrial e Intelectual</div>
+            <small>
+            </small>
+</h1>
 </div>
 <input type="hidden" name="id_registro" id="id_registro" value="0">
 <div class="row">
