--- a/Views/PI/Obra.cshtml
+++ b/Views/PI/Obra.cshtml
@@ -120,8 +120,9 @@
                                     </div>
                                     <% } %>
                                 </text>).Caption("NOMBRE");
-                                columns.AddFor(m => m.tipo_solicitud_nombre).Caption("TIPO DE OBRA");
-                                columns.AddFor(m => m.empresa_nombre).Caption("EMPRESA");
+                                columns.AddFor(m => m.tipo_solicitud_nombre).Caption("Tipo de Obra");
+                                columns.AddFor(m => m.empresa_nombre).Caption("Empresa");
+                                columns.AddFor(m => m.pais_nombre).Caption("Pais");
                             })
                             .ColumnAutoWidth(true)
                             .SearchPanel(p => p.Visible(true).Placeholder("Buscar"))
