--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -134,7 +134,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" style="display:none;">
                                         <div class="form-group" id="uu_021_c">
                                             <label for="uu_021">Solicitud <font size="4" style="color:#FF0000"> * </font></label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_021" autocomplete="off" style="width: 100%;">
@@ -352,20 +352,20 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr id="uu_comen_a0" style="display:none;"/>
+                                <hr/>
                                 <div class="row">
-                                    <div class="col-md-8" id="uu_comen_a1" style="display:none;">
+                                    <div class="col-md-8">
                                         <div class="form-group" style="margin:0 !important;">
                                             <label>Comentarios</label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4" id="uu_comen_a2" style="display:none;">
+                                    <div class="col-md-4">
                                         <div class="text-right">
                                             <button class='btn btn-sm btn-info btn-comentario' id="Comentarios1" onclick='ModalComentario(1);'><i class='fa fa-plus'></i> Agregar comentario</button>
                                             <br /><br />
                                         </div>
                                     </div>
-                                    <div class="col-md-12" id="uu_comen_a3" style="display:none;">
+                                    <div class="col-md-12">
                                         <ul class="ctm-ul-list ctm-comentarios" id="general">
                                             <li class="ctm-comentario">
                                                 <div class="ctm-comentario-body">
@@ -484,20 +484,20 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr id="uu_comen_b0" style="display:none;"/>
+                                <hr/>
                                 <div class="row">
-                                    <div class="col-md-8" id="uu_comen_b1" style="display:none;">
+                                    <div class="col-md-8">
                                         <div class="form-group" style="margin:0 !important;">
                                             <label>Comentarios</label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4" id="uu_comen_b2" style="display:none;">
+                                    <div class="col-md-4">
                                         <div class="text-right">
                                             <button class='btn btn-sm btn-info btn-comentario' id="Comentarios2" onclick='ModalComentario(2);'><i class='fa fa-plus'></i> Agregar comentario</button>
                                             <br /><br />
                                         </div>
                                     </div>
-                                    <div class="col-md-12" id="uu_comen_b3" style="display:none;">
+                                    <div class="col-md-12">
                                         <ul class="ctm-ul-list ctm-comentarios" id="registro">
                                             <li class="ctm-comentario">
                                                 <div class="ctm-comentario-body">
@@ -509,34 +509,61 @@
                                 </div>
                             </div>@*tab02*@
 
-                            <div class="tab-pane fade" id="tab03" role="tabpanel">
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <div class="form-group" id="uu_16_c">
-                                            <label id="uu_16_l">Persona que solicitó la licencia <font size="4" style="color:#FF0000"> * </font></label>
-                                            <input type="text" class="form-control input-sm" id="uu_16" autocomplete="off" />
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group" id="uu_17_c">
-                                            <label for="uu_17">Licencia</label>
-                                            <select class="select2 form-control input-sm custom-select" id="uu_17" autocomplete="off" style="width: 100%;">
-                                                <option value="0" disabled selected>Seleccione una opción</option>
-                                                @foreach (ConvenioLicencia item in ViewBag.licencia)
-                                                {
-                                                    <option value="@item.id">@item.nombre</option>
-                                                }
-                                            </select>
-                                        </div>
+                        <div class="tab-pane fade" id="tab03" role="tabpanel">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="form-group" id="uu_16_c">
+                                        <label id="uu_16_l">Persona que solicitó la licencia</label>
+                                        <input type="text" class="form-control input-sm" id="uu_16" autocomplete="off" />
                                     </div>
                                 </div>
-                            </div>@*tab03*@
+                                <div class="col-md-3">
+                                    <div class="form-group" id="uu_17_c">
+                                        <label for="uu_17">Licencia</label>
+                                        <select class="select2 form-control input-sm custom-select" id="uu_17" autocomplete="off" style="width: 100%;">
+                                            <option value="0" disabled selected>Seleccione una opción</option>
+                                            @foreach (ConvenioLicencia item in ViewBag.licencia)
+                                            {
+                                                <option value="@item.id">@item.nombre</option>
+                                            }
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr id="lic_0_c" style="display:none;" />
+                            <div class="row" id="lic_1_c" style="display:none;">
+                                <div class="col-md-12">
+                                    <div class="form-group" id="lict" style="margin:0 !important;">
+                                        <label>Licencia</label>
+                                    </div>
+                                    <div class="form-group" id="licc">
+                                        <a href="" id="licl" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
+                                        @*<label for="carta" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>*@
+                                        <input type="file" id="licencia" style="display:none;" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3" id="lic_2_c" style="display:none;">
+                                    <div class="form-group">
+                                        <label>Fecha de vencimiento</label>
+                                        <input type="text" value="2024/03/03" class="form-control input-sm" id="lic_01" autocomplete="off" disabled />
+                                    </div>
+                                </div>
+                                <div class="col-md-10" id="lic_3_c" style="display:none;">
+                                    <div class="form-group">
+                                        <label>Observaciones</label>
+                                        <input type="text" value="prueba de observaciones" class="form-control input-sm" id="lic_03" autocomplete="off" disabled />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>@*tab03*@
 
                             <div class="tab-pane fade" id="tab04" role="tabpanel">
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_18_c">
-                                            <label>Persona que solicitó la cesión <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label>Persona que solicitó la cesión</label>
                                             <input type="text" class="form-control input-sm" id="uu_18" autocomplete="off" />
                                         </div>
                                     </div>
