separar propiedad industrial e intelectual

--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -76,12 +76,12 @@
 <div class="subheader">
     <h1 class="subheader-title">
         @*Registro Marcas*@
-        Propiedad Industrial e Intelectual
-        <small>
-        </small>
-    </h1>
+        <div id="tituloregistro">Propiedad Industrial e Intelectual</div>
+            <small>
+            </small>
+</h1>
 </div>
-
+<input type="hidden" name="tipo_registro" id="tipo_registro" value="0">
 <div class="row">
     <div class="col-md-12">
         <div class="panel ctm-panel" id="">
@@ -160,13 +160,38 @@
         var START_DATE = "@Html.Raw(DateTime.Now.AddDays(-60).ToString("yyyy-MM-dd"))";
         var END_DATE = "@Html.Raw(DateTime.Now.ToString("yyyy-MM-dd"))";
 
+        var url = new URL(location.href); //Mediante esta propiedad accedemos a la dirección URL completa de la página mostrada en una ventana
+        const urlParams = new URLSearchParams(url.search);
+        var tipo_registro = urlParams.get('tipo');
+
+        //var tipourl = parseInt($("#tipo_registro").val());
+        //if (tipourl == 0) tipourl = 1;
+        switch (parseInt(tipo_registro)) {
+            case 1: tipo_solicitud = 1; tipo_solicitud_nombre = "Propiedad Industrial - Marcas"; break;
+            case 2: tipo_solicitud = 2; tipo_solicitud_nombre = "Propiedad Industrial - Avisos Comerciales"; break;
+            case 3: tipo_solicitud = 3; tipo_solicitud_nombre = "Propiedad Industrial - Patentes"; break;
+            case 4: tipo_solicitud = 4; tipo_solicitud_nombre = "Propiedad Industrial - Diseños Industriales"; break;
+            case 5: tipo_solicitud = 5; tipo_solicitud_nombre = "Propiedad Industrial - Modelos Utilidades"; break;
+            case 6: tipo_solicitud = 6; tipo_solicitud_nombre = "Propiedad Industrial - Modelos Industriales"; break;
+            case 7: tipo_solicitud = 7; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Artisticas"; break;
+            case 8: tipo_solicitud = 8; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Visuales"; break;
+            case 9: tipo_solicitud = 9; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Literarias"; break;
+            case 10: tipo_solicitud = 10; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Auditivas"; break;
+            case 11: tipo_solicitud = 11; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Gr&aacute;ficas"; break;
+            case 12: tipo_solicitud = 12; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Tecnol&oacute;gicas"; break;
+            default: tipo_solicitud = 0; tipo_solicitud_nombre = "Propiedad Industrial e Intelectual"; break;
+        }
+        document.getElementById("tipo_registro").value = tipo_solicitud;
+        document.getElementById("tituloregistro").innerHTML = "" + tipo_solicitud_nombre;
+
         var valReqData = {
             ID: 0,
             START_DATE: START_DATE,
             END_DATE: END_DATE,
             USUARIO: "@ViewBag.ul.id",
             STR: "aa",
-            TIPO: "RegistroMarca"
+            TIPO: "RegistroMarca",
+            TIPO_REGISTRO: tipo_solicitud
         };
         var tipo = valReqData.TIPO;
         function buildValidationSuggestionRequest() {
@@ -179,7 +204,7 @@
             $("#tabla01").dxDataGrid("getDataSource").reload();
         }
         $(document).ready(function () {
-            $("#tabla01 .dx-toolbar-after").prepend("<a class='btn btn-info btn-sm' href='" + hosturl + "PI/RegistroMarca'><i class='fa fa-plus'></i> Nuevo registro</button>");
+            $("#tabla01 .dx-toolbar-after").prepend("<a class='btn btn-info btn-sm' href='" + hosturl + "PI/RegistroMarca?tipo="+tipo_solicitud+"'><i class='fa fa-plus'></i> Nuevo registro</button>");
         });
     </script>
     <script src="@Url.Content("~/Content/js/admin_registromarcas.js?t=" + DateTime.Now.Ticks.ToString())"></script>
