--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -87,6 +87,7 @@
 </h1>
 </div>
 <input type="hidden" name="id_registro" id="id_registro" value="0">
+<input type="hidden" name="tipo_registromarca" id="tipo_registromarca" value="0">
 <div class="row">
     <div class="col-md-12">
         <div class="panel ctm-panel" id="">
@@ -125,7 +126,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_02_c">
                                             <label for="uu_02">Tipo de solicitud <font size="4" style="color:#FF0000"> * </font></label>
-                                            <select class="select2 form-control input-sm custom-select" id="uu_02" autocomplete="off" style="width: 100%;">
+                                            <select class="select2 form-control input-sm custom-select" id="uu_02" autocomplete="off" style="width: 100%;" disabled>
                                                 @*<option value="0" disabled selected>Seleccione una opción</option>*@
                                                 @foreach (TipoSolicitud item in ViewBag.tipo_solicitud)
                                                 {
@@ -547,7 +548,7 @@
                                 <div class="col-md-3" id="lic_2_c" style="display:none;">
                                     <div class="form-group">
                                         <label>Fecha de vencimiento</label>
-                                        <input type="text" value="2024/03/03" class="form-control input-sm" id="lic_01" autocomplete="off" disabled />
+                                        <input type="text" value="2024/03/03" class="form-control input-sm" id="lic_02" autocomplete="off" disabled />
                                     </div>
                                 </div>
                                 <div class="col-md-10" id="lic_3_c" style="display:none;">
@@ -909,7 +910,8 @@
                     </section>
                     <br />
                     <section class="text-right">
-                        <button type="button" class="btn btn-default waves-effect waves-themed" onclick="window.location = '/PI/RegistroMarcas';" id="btnCancelar"><i class="fa fa-ban"></i> Cancelar</button>
+                        @*<button type="button" class="btn btn-default waves-effect waves-themed" onclick="window.location = '/PI/RegistroMarcas?tipo=1';" id="btnCancelar"><i class="fa fa-ban"></i> Cancelar</button>*@
+                        <button type="button" class="btn btn-default waves-effect waves-themed" onclick="Cancelar();" id="btnCancelar"><i class="fa fa-ban"></i> Cancelar</button>
                         <button type="button" class="btn btn-danger" onclick="Remover();" id="btnRemover" style="display:none;"><i class="fa fa-ban"></i> Remover</button>
                         <button type="button" class="btn btn-info" onclick="Guardar();" id="btnGuardar"><i class="fa fa-save"></i> Guardar</button>
                     </section>
