--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -532,13 +532,13 @@
                                 </div>
                             </div>
                             <hr id="lic_0_c" style="display:none;" />
-                            <div class="row" id="lic_1_c" style="display:none;">
+                            <div class="row" id="licencia_a" style="display:none;">
                                 <div class="col-md-12">
-                                    <div class="form-group" id="lict" style="margin:0 !important;">
+                                    @*<div class="form-group" id="licenciat" style="margin:0 !important;">
                                         <label>Licencia</label>
-                                    </div>
+                                    </div>*@
                                     <div class="form-group" id="licc">
-                                        <a href="" id="licl" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
+                                        <a href="" id="licencial" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
                                         @*<label for="carta" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>*@
                                         <input type="file" id="licencia" style="display:none;" />
                                     </div>
@@ -1068,6 +1068,7 @@
         });*/
         var mainid = @ViewBag.mainid;
         var solicitudes = @Html.Raw(JsonConvert.SerializeObject(ViewBag.solicitud));
+        var licencias = @Html.Raw(JsonConvert.SerializeObject(ViewBag.licencia));
         console.log(solicitudes);
     </script>
     <script src="@Url.Content("~/Content/js/admin_registromarcadetalle.js?t=" + DateTime.Now.Ticks.ToString())"></script>
