--- a/Views/PI/DisenoIndustrial.cshtml
+++ b/Views/PI/DisenoIndustrial.cshtml
@@ -75,7 +75,7 @@
 }
 <div class="subheader">
     <h1 class="subheader-title">
-        Dise&ntilde;o Industrial
+        Formatos Dise&ntilde;os Industriales
         <small>
         </small>
     </h1>
