--- a/Views/PI/Marca.cshtml
+++ b/Views/PI/Marca.cshtml
@@ -75,7 +75,7 @@
 }
 <div class="subheader">
     <h1 class="subheader-title">
-        Marca
+        Formatos Marcas
         <small>
         </small>
     </h1>
