--- a/Views/PI/ModeloIndustrial.cshtml
+++ b/Views/PI/ModeloIndustrial.cshtml
@@ -75,7 +75,7 @@
 }
 <div class="subheader">
     <h1 class="subheader-title">
-        Modelo Industrial
+        Formatos Modelos Industriales
         <small>
         </small>
     </h1>
