--- a/Views/PI/Patente.cshtml
+++ b/Views/PI/Patente.cshtml
@@ -75,7 +75,7 @@
 }
 <div class="subheader">
     <h1 class="subheader-title">
-        Patente
+        Formatos Patentes
         <small>
         </small>
     </h1>
